[workspace]
members = [
    "dash-spv-apple-bindings",
    "dash-spv-crypto",
    "dash-spv-event-bus",
    "dash-spv-example-app",
    "dash-spv-keychain",
    "dash-spv-macro",
    "dash-spv-masternode-processor",
    "dash-spv-platform",
    "reachability",
]
resolver = "2"

[workspace.package]
authors = ["Vladimir Pirogov <vladimir.pirogov@dash.org>"]
description = "Dash SPV core"
documentation = "https://dashcore.readme.io/docs"
homepage = "https://github.com/dashpay/dash-shared-core"
license = "MIT"
keywords = ["crypto", "dash", "spv"]

#[profile.test]
#default = ["use_serde", "test-helpers"]

[profile.dev]
opt-level = 0
debug = true        # Generates DWARF debug symbols that LLDB can read
lto = false         # Disables LTO to preserve function boundaries
incremental = true  # Enable incremental builds for faster rebuilds

[profile.release]
opt-level = 3
lto = "thin"
