[package]
name = "dash_spv_apple_bindings"
version = "0.5.2"
description = "C-bindings for using and interoperating with Dash SPV"
readme = "README.md"
edition = "2021"
build = "build.rs"
publish = true

[dependencies]
logging = { path = "../logging" }
tracing = "0.1.40"

[dependencies.dash-spv-masternode-processor]
path = "../dash-spv-masternode-processor"
features = ["default", "generate-dashj-tests", "use_serde"]

[dependencies.dash-spv-coinjoin]
path = "../dash-spv-coinjoin"
features = []

[dependencies.rs-merk-verify-c-binding]
git = "https://github.com/dashpay/rs-merk-verify-c-binding"
branch = "for-use-in-main-crate"
version = "0.1.3"

[build-dependencies]
cbindgen = "0.24.3"

[lib]
name = "dash_spv_apple_bindings"
crate-type = ["staticlib", "cdylib"]

#[profile.release]
#lto = "thin"
#opt-level = 3
#debug = true

