[package]
name = "dash-spv-coinjoin"
version = "0.5.0"
description = "Library for processing coinjoin messages"

edition = "2021"
build = "build.rs"
publish = false

[features]
unstable = []
test-helpers = []

[dependencies]
byte = "0.2"
dash-spv-crypto = { path = "../dash-spv-crypto" }
dash-spv-masternode-processor = { path = "../dash-spv-masternode-processor" }
dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "bls"], default-features = false, branch = "feat/ferment" }
ferment-macro = { git = "https://github.com/dashpay/ferment", package = "ferment-macro" }
logging = { path = "../logging" }
tracing = "0.1.40"

[build-dependencies]
cbindgen = "0.28.0"

[lib]
name = "dash_spv_coinjoin"
