[package]
name = "dash-spv-coinjoin"
version = "0.5.1"
description = "Library for processing coinjoin messages"

edition = "2021"
build = "build.rs"
publish = false

[features]
unstable = []
test-helpers = []

[dependencies]
dash-spv-crypto = { workspace = true }
dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple"], default-features = false, branch = "feat/ferment" }
ferment-macro = { git = "https://github.com/dashpay/ferment", package = "ferment-macro" }
logging = { path = "../logging" }
tracing = "0.1.40"

[build-dependencies]
cbindgen = "0.28.0"

[lib]
name = "dash_spv_coinjoin"
