[package]
name = "dash-spv-crypto"
version = "0.0.1"
description = "Library for key derivation"

edition = "2021"
publish = false

[features]
default = ["std", "secp-recovery"]
unstable = []
rand = ["secp256k1/rand-std"]
secp-lowmemory = ["secp256k1/lowmemory"]
secp-recovery = ["secp256k1/recovery"]
generate-dashj-tests = []
use_serde = ["serde"]
# At least one of std, no-std must be enabled.
#
# The no-std feature doesn't disable std - you need to turn off the std feature for that by disabling default.
# Instead, no-std enables additional features required for this crate to be usable without std.
# As a result, both can be enabled without conflict.
std = ["secp256k1/std", "bitcoin_hashes/std"]
#std = ["secp256k1/std", "bitcoin_hashes/std", "bech32/std"]
#no-std = ["hashbrown", "core2/alloc", "bitcoin_hashes/alloc"]

[dependencies]
bip38 = { git = "https://github.com/pankcuf/bip38", rev = "87abd21" }
bitcoin_hashes = { version = "0.16.0", default-features = false }
blake3 = "1.3.2"
bls-signatures = { git = "https://github.com/dashpay/bls-signatures", tag = "1.3.5", features = ["legacy", "bip32", "apple", "use_serde" ]  }
byte = "0.2"
core2 = { version = "0.4.0", optional = true, default-features = false }
dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "bls", "message_verification", "quorum_validation", "bincode"], default-features = false, branch = "feat/ferment" }
ed25519-dalek = "2.0.0-rc.3"
log = { version = "0.4.*", features = ["std"] }
ferment = { git = "https://github.com/dashpay/ferment", package = "ferment" }
ferment-macro = { git = "https://github.com/dashpay/ferment", package = "ferment-macro" }

rs-x11-hash = "0.1.8"
secp256k1 = { version = "0.26.0", features = [ "recovery", "rand-std", "bitcoin_hashes" ] }
serde = { version = "1.0.215", features = ["derive"], optional = true }
simplelog = "0.12.2"
zeroize = "1.5.7"

[dev-dependencies]
base64 = "0.21.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[lib]
name = "dash_spv_crypto"
#crate-type = ["staticlib", "cdylib"]

#[profile.release]
#lto = "thin"
#opt-level = 3
#debug = true
