[package]
name = "dash-spv-crypto"
version = "0.0.1"
description = "Library for key derivation"

edition = "2021"
publish = false

[features]
default = []
generate-dashj-tests = []
use_serde = ["serde"]

[dependencies]
bip38 = { git = "https://github.com/pankcuf/bip38", rev = "87abd21" }
blake3 = "1.3.2"
bls-signatures = { git = "https://github.com/dashpay/bls-signatures", tag = "1.3.5", features = ["legacy", "bip32", "apple", "use_serde" ]  }
byte = "0.2"
dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "bls", "message_verification", "quorum_validation"], default-features = false, branch = "feat/ferment" }
ed25519-dalek = "2.1.1"
log = { version = "0.4.*", features = ["std"] }
ferment = { git = "https://github.com/dashpay/ferment", package = "ferment" }
ferment-macro = { git = "https://github.com/dashpay/ferment", package = "ferment-macro" }

rs-x11-hash = "0.1.8"
serde = { version = "1.0.215", features = ["derive"], optional = true }
simplelog = "0.12.2"
zeroize = "1.5.7"

[lib]
name = "dash_spv_crypto"
#crate-type = ["staticlib", "cdylib"]

#[profile.release]
#lto = "thin"
#opt-level = 3
#debug = true
