[package]
name = "dash-spv-crypto"
version = "0.5.1"
description = "Library for key derivation"

edition = "2021"
publish = false

[features]
default = []
generate-dashj-tests = []
use_serde = ["serde"]

[dependencies]
bip38 = { git = "https://github.com/pankcuf/bip38" }
blake3 = "1.5"
byte = "0.2"
dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "message_verification", "quorum_validation", "bls-signatures", "ed25519-dalek"], default-features = false, branch = "feat/ferment" }

ed25519-dalek = "2.1.1"
log = { version = "0.4.*", features = ["std"] }
ferment = { version = "0.2", package = "ferment" }
ferment-macro = { version = "0.2", package = "ferment-macro" }
rs-x11-hash = "0.1.8"
serde = { version = "1.0.215", features = ["derive"], optional = true }
zeroize = "1.8.1"

[lib]
name = "dash_spv_crypto"
