[package]
name = "dash-spv-event-bus"
version = "0.0.1"
description = "Library for interactions between different SPV services"

edition = "2021"
publish = false

[dependencies]
#rs-dapi-client = { git = "https://github.com/pankcuf/platform", branch = "test/ferment", package = "rs-dapi-client" }

[lib]
name = "dash_spv_event_bus"
