[package]
name = "dash-spv-event-bus"
version = "0.5.1"
description = "Library for interactions between different SPV services"

edition = "2021"
publish = false

[dependencies]
#rs-dapi-client = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "rs-dapi-client" }
ferment-macro = { version = "0.2", package = "ferment-macro" }

[lib]
name = "dash_spv_event_bus"
