[package]
name = "dash-spv-masternode-processor"
version = "0.4.18"
description = "Library for processing masternodes and quorums (SPV)"

edition = "2021"
publish = false

[features]
default = ["message_verification"]
generate-dashj-tests = []
message_verification = ["dashcore/message_verification"]
test-helpers = []
use_serde = ["serde"]
std = ["dashcore/std"]

#bincode = ["dashcore/bincode"]

[dependencies]
blake3 = "1.3.2"
bincode = "=2.0.0-rc.3"
bls-signatures = { git = "https://github.com/dashpay/bls-signatures", tag = "1.3.5", features = ["legacy", "bip32", "apple", "use_serde" ]  }
byte = "0.2"
dash-spv-crypto = { path = "../dash-spv-crypto" }
dirs-next = "2.0.0"
#ed25519-dalek = "2.0.0-rc.3"
ferment = { git = "https://github.com/dashpay/ferment", package = "ferment" }
ferment-macro = { git = "https://github.com/dashpay/ferment", package = "ferment-macro" }
#ferment = { path = "../../ferment/ferment" }
#ferment-macro = { path = "../../ferment/ferment-macro" }

dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "bls", "message_verification", "quorum_validation", "bincode"], default-features = false, branch = "feat/ferment" }

rs-x11-hash = "0.1.8"
serde = { version = "1.0.215", features = ["derive"], optional = true }
serde_json = "1.0.85"
simplelog = "0.12.2"
reqwest = { version =  "0.12.9", features = ["blocking", "json"] }

[dev-dependencies]
base64 = "0.22.1"
serde = { version = "1.0.209", features = ["derive"] }

[lib]
name = "dash_spv_masternode_processor"
#crate-type = ["staticlib", "cdylib"]

#[profile.test]
#default = ["use_serde", "test-helpers"]

#[profile.release]
#lto = "thin"
#opt-level = 3
#debug = true
