[package]
name = "dash-spv-masternode-processor"
version = "0.5.1"
description = "Library for processing masternodes and quorums (SPV)"

edition = "2021"
publish = false

[features]
default = ["message_verification"]
generate-dashj-tests = []
message_verification = ["dashcore/message_verification"]
test-helpers = []
use_serde = ["serde"]
std = ["dashcore/std"]

[dependencies]
blake3 = "1.3.2"
bincode = "=2.0.0-rc.3"
#bls-signatures = { git = "https://github.com/dashpay/bls-signatures", tag = "1.3.5", features = ["legacy", "bip32", "apple", "use_serde" ]  }
dash-spv-crypto = { workspace = true }
dirs-next = "2.0.0"
ferment = { git = "https://github.com/dashpay/ferment", package = "ferment" }
ferment-macro = { git = "https://github.com/dashpay/ferment", package = "ferment-macro" }

dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "message_verification", "quorum_validation", "bincode", "ed25519-dalek"], default-features = false, branch = "feat/ferment" }

rs-x11-hash = "0.1.8"
serde = { version = "1.0.215", features = ["derive"], optional = true }
serde_json = "1.0.85"
simplelog = "0.12.2"
reqwest = { version =  "0.12.9", features = ["blocking", "json"] }

[dev-dependencies]
base64 = "0.22.1"
serde = { version = "1.0.209", features = ["derive"] }

[lib]
name = "dash_spv_masternode_processor"
