[package]
name = "dash-spv-masternode-processor"
version = "0.5.1"
description = "Library for processing masternodes and quorums (SPV)"

edition = "2021"
publish = false

[features]
default = ["message_verification", "quorum_validation"]
generate-dashj-tests = []
message_verification = ["dashcore/message_verification"]
quorum_validation = ["dashcore/quorum_validation"]
test-helpers = []
use_serde = ["serde"]
std = ["dashcore/std"]

[dependencies]
bincode = "=2.0.0-rc.3"
dash-spv-crypto = { workspace = true }
dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "bincode", "ed25519-dalek"], default-features = false, branch = "feat/ferment" }
ferment = { version = "0.2", package = "ferment" }
ferment-macro = { version = "0.2", package = "ferment-macro" }
serde = { version = "1.0.215", features = ["derive"], optional = true }
serde_json = "1.0.85"

[dev-dependencies]
base64 = "0.22.1"
serde = { version = "1.0.209", features = ["derive"] }
reqwest = { version =  "0.12.9", features = ["blocking", "json"] }

[lib]
name = "dash_spv_masternode_processor"
