[package]
name = "logging"
version = "0.1.0"
edition = "2021"
description = "Logging framework"
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dirs = "4.0"
dirs-next = "2.0.0"  # Optional, for dynamic log file paths