[package]
name = "logging"
version = "0.1.0"
edition = "2021"
description = "Logging framework"
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
tracing = { version = "0.1.41", features = ["max_level_debug"] } #"release_max_level_warn"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "4.0"
dirs-next = "2.0.0"  # Optional, for dynamic log file paths