[package]
name = "reachability"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.158"
system-configuration = "0.5.0"
tokio = { version = "1.25.0", features = ["full"] }

[lib]
name = "reachability"
